One Final Commit This has been a massive and interesting challenge!

--- a/src/scss/settings/_colours.scss
+++ b/src/scss/settings/_colours.scss
@@ -2,3 +2,7 @@ $grey-light: #fafafa;
 $grey-dark: #3a3a3a;
 $white: #fff;
 $winner_colour: gold;
+
+$btn-primary: #d0e3f0;
+$btn-negative: #ffbbca;
+$btn-positive: #d0f0db;
