--- a/src/scss/settings/_spacing.scss
+++ b/src/scss/settings/_spacing.scss
@@ -2,4 +2,4 @@
 // hacky way to do it, for an MVP at least!
 // I'd do it properly in production, obviously
 
-$base-space: 10px;
+$base-space: 1em;
